# zerhacker

./: .gitignore  README.md  __main__.py  dev_requirements.txt  environment.py  finecut.py  main.py  multicrop.py  options.toml  part_1_multi_crop.py  part_2_autocrop.py  pyproject.toml  requirements.txt  shared_utils.py  splitter.py  splitter_before_refact.py
.github/workflows/: codeql-analysis.yml
src/: config.toml  environment.py  finecut.py  image_parent.py  initiator.py  main.py  main_zerhacker.py  main_zerhacker_non_parallel.py  only_fine_cut.py  pydantic_classes.py  pydantic_config.py  pydantic_image.py  pydantic_wip.py  scanned_album_page.py  shared_utils.py  splitter.py  zerhacker.py
src/contours/: contours.py
src/fine_cut/: extracted_image.py
src/old/: finecut.py  shared_utils.py  splitter.py  zerhacker.py
src/shared/: image_parent.py  initiator.py  logger.py  multi_threading.py  pydantic_args.py  pydantic_config.py
src/splitter/: scanned_album_page.py
tests/fine_cut/: test_fine_cut.py
tests/splitter/: test_splitter.py
